--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@ Accent #1 (Pastel Orange): #FFBFA0
 Accent #2 (Pastel Purple): #E9D6EC
 */
 
+/* Global Tags */
+
+*{
+    box-sizing: border-box;
+}
+
 body {
     background-color: #ffffff;
     font-family: 'Poppins', sans-serif;
@@ -45,7 +51,7 @@ img {
 }
 
 a {
-    color: #60935D;
+    color: #E9D6EC;
     text-decoration: none;
 }
 
@@ -61,6 +67,56 @@ a:hover,
 a:focus {
     color: #053B06;
     text-decoration: underline;
+}
+
+
+header {
+    background-color: #60935D;
+    padding: 10px;
+    margin: 0 10px;
+    border-bottom: 3px solid #000;
+    text-align: center;
+    box-shadow: 0px 6px 5px 0px rgba(50, 50, 50, 0.75);
+    position: relative;
+}
+
+
+/* Layout */
+
+nav > ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+nav > ul > li {
+    display: inline-block;
+}
+
+nav > ul > li > a {
+    padding: 0 15px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #000;
+}
+
+nav > ul > li > a:hover {
+    color: #E9D6EC;
+    text-decoration: none;
+}
+
+nav > ul > li > a:visited {
+    color: #FFBFA0;
+    text-decoration: none;
+}
+
+nav > ul > li > a:active {
+    color: #E9D6EC;
+    text-decoration: none;
+}
+
+nav {
+    display: inline-block;
+    width: 100%;
 }
 
 .button {
@@ -90,3 +146,30 @@ a:focus {
     background-color: #60935D;
     color: #ffffff;
 }
+
+/* Layout Styling */
+
+.container {
+    padding: 0 10px;
+}
+
+#work .row {
+    margin: 25px 0; 
+    padding-bottom: 25px; border-bottom: 1px solid #000;
+}
+
+#hero h1 {
+    text-align: center;
+    margin: 0;
+    padding: 0.67em 0;
+}
+
+#logo {
+    max-width: 202px;
+}
+
+
+#hero {
+    background-color: #60935D;
+}
+
