--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ nav {
 
 #work{
     background-color: #60935D;
-    margin: 10px 10px;
+    margin: 0 10px;
     padding: 15px;
 }
 
@@ -245,9 +245,13 @@ nav {
     color: #ffffff;
 }
 
-#pluto-pay> h1 {
+#pluto-pay {
     text-align: center;
     background-color: #032203;
+
+}
+
+#pluto-pay> h1 {
     color: #ffffff;
 }
 
