--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,6 @@ header {
     background-color: #053B06;
     margin: 0 10px;
     border-bottom: 3px solid #000;
-    text-align: center;
     box-shadow: 0px 6px 5px 0px rgba(50, 50, 50, 0.75);
     position: relative;
 }
@@ -106,11 +105,9 @@ footer {
 nav > ul {
     list-style-type: none;
     padding: 0;
+    margin: 0;
 }
 
-nav > ul > li {
-    display: inline-block;
-}
 
 nav > ul > li > a {
     padding: 0 15px;
@@ -134,10 +131,6 @@ nav > ul > li > a:active {
     text-decoration: none;
 }
 
-nav {
-    display: inline-block;
-    width: 100%;
-}
 
 .button {
    display: inline-block;
@@ -188,7 +181,7 @@ nav {
 }
 
 #logo {
-    max-width: 202px;
+    max-width: 150px;
 }
 
 
@@ -218,8 +211,8 @@ nav {
 
 
 
-.logo {
-    size: fixed;
+#logo {
+    padding-top: 8px;
 }
 
 #about-me > h1 {
@@ -279,6 +272,39 @@ nav {
     height: auto;
 }
 
+.navtoggle li:not(:last-child) {
+    display: none;
+}
+
+.navtoggle, .navtoggle.responsive {
+    position: relative;
+}
+
+.navtoggle li .icon {
+    position: absolute;
+    right: 0;
+    top: 2px;
+    font-size: 20px;
+    padding-right: 0;
+  }
+  
+  .navtoggle.responsive li  {
+    display: block;
+  }
+
+  .navtoggle.responsive nav {
+    padding: 24px 0 0;
+  }
+  .navtoggle.responsive li  {
+    display: block;
+    padding: 10px 0;
+    border-top: 1px solid rgba(255,127,80,0.5);
+  }
+  
+  .navtoggle.responsive li:last-child  {
+    padding: 0 0 10px;
+  }
+
 /* Animations */
 
 
@@ -317,7 +343,7 @@ nav {
 /*====================
 Medium devices (640px and Larger)
 ======================*/
-@media only screen and (min-width:640px) {
+@media only screen and (min-width:641px) {
     header {
         text-align: unset;
         padding: 20px 0 13px;
@@ -331,6 +357,10 @@ Medium devices (640px and Larger)
 
     #logo {
         margin-top: 15px;
+    }
+
+    .logo {
+        max-width: 202px;
     }
 
     .col-md-6 {
@@ -348,7 +378,22 @@ Medium devices (640px and Larger)
         display: table;
     }
     
+    nav > ul > li {
+        display: inline-block;
+    }
 
+    .navtoggle li:not(:last-child) {
+        display: inline-block;
+      }
+
+    .navtoggle li:last-child {
+        display: none;
+      }
+
+    nav > ul {
+        margin: 1em 0;
+      }
+      
 }
 
 /*====================
